# desafio_mcp

./: .gitignore  .mkdocs-gitignore  LICENSE  MCPserver.py  OllamaClient.py  README.md  agent_output.md  dataFaker.py  json_to_markdown.py  mkdocs.yml  model_comparison_report.md  model_comparison_results.json  pyproject.toml  test_questions_responses.md  test_questions_tools.py
.github/workflows/: docs.yml
data/: cars-v1.csv  cars.csv
docs/: README.md  components.md  examples.md  getting-started.md  troubleshooting.md
